--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,9 @@ dependencies:
   # 새로운 icon을 쓰기 위함
   phosphor_flutter: ^1.4.0
 
+
+  # 반응형 sizer
+  responsive_sizer: ^3.1.1
   sizer: ^2.0.15
   flutter_screenutil: ^5.5.4
   flutter_keyboard_size: ^1.0.0+4
