--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -79,6 +79,7 @@
 	  <dict>
 	  <key>CFBundleURLSchemes</key>
 	  <array>
+	    <string>com.googleusercontent.apps.889387616330-6r2p8q17rq7p8ieap6066fa8cd96l5qh</string>
 	    <string>fb3261744130770555</string>
 	  </array>
 	  </dict>
