--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,12 +26,19 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion flutter.compileSdkVersion
+    // compileSdkVersion flutter.compileSdkVersion
+
+    // Flutter Local Notification Android Setting
+    compileSdkVersion 33
+
     ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
+        // Flutter Local Notification Android Setting
+        // coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -69,4 +76,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // Flutter Local Notification Android Setting
+    // implementation "androidx.multidex:multidex:2.0.1"
+    // coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
