--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,9 @@ dependencies:
   flutter_native_timezone: ^2.0.0
   flutter_app_badger: ^1.5.0
 
+  # 연결
+  connectivity_plus: ^3.0.2
+
   
   
 
