--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,7 +121,9 @@ dependencies:
   #flutter_keyboard_size: ^1.0.1
 
   # 로컬 알림
-  flutter_local_notifications: ^12.0.2
+  #flutter_local_notifications: ^5.0.0+4
+  flutter_local_notifications: ^9.8.0
+  #flutter_local_notifications: ^12.0.2
   #flutter_native_timezone: ^2.0.0
   #flutter_app_badger: ^1.5.0
 
