--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -78,5 +78,9 @@
 	<array>
 	  <string>tel</string>
 	</array>
+	<key>UIBackgroundModes</key>
+    <array>
+        <string>remote-notification</string>
+    </array>
 </dict>
 </plist>
