--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,9 @@ dependencies:
   #flutter_local_notifications: ^12.0.2
   #flutter_native_timezone: ^2.0.0
   #flutter_app_badger: ^1.5.0
+  
+  # 앱 뱃지 (지금은 못쓴다.)
+  flutter_app_badger: ^1.5.0
 
   # 연결
   connectivity_plus: ^3.0.2
