--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,39 +22,12 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>com.googleusercontent.apps.889387616330-6r2p8q17rq7p8ieap6066fa8cd96l5qh</string>
-				<string>fb3261744130770555</string>
-			</array>
-		</dict>
-	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
-	<key>FacebookAppID</key>
-	<string>3261744130770555</string>
-	<key>FacebookClientToken</key>
-	<string>2a41824633ad48003dfaf08d0d5d8eca</string>
-	<key>FacebookDisplayName</key>
-	<string>attemptLogin</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>fbapi</string>
-		<string>fb-messenger-share-api</string>
-	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSCameraUsageDescription</key>
-	<string>카메라 접근을 허용하시겠습니까?</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>마이크 접근을 허용하시겠습니까?</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>사진 접근을 허용하시겠습니까?</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -74,13 +47,58 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<!-- FaceBook 로고인 인증 IOS 설정-->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.889387616330-6r2p8q17rq7p8ieap6066fa8cd96l5qh</string>
+				<string>fb3261744130770555</string>
+			</array>
+		</dict>
+	</array>
+
+	<key>FacebookAppID</key>
+	<string>3261744130770555</string>
+
+	<key>FacebookClientToken</key>
+	<string>2a41824633ad48003dfaf08d0d5d8eca</string>
+
+	<key>FacebookDisplayName</key>
+	<string>attemptLogin</string>
+
 	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+	</array>
+	<!-- FaceBook 로고인 인증 IOS 설정  -->
+
+
+    <!-- ImagePicker IOS 설정 -->
+	<key>NSCameraUsageDescription</key>
+	<string>카메라 접근을 허용하시겠습니까?</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>마이크 접근을 허용하시겠습니까?</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진 접근을 허용하시겠습니까?</string>
+	<!-- ImagePicker IOS 설정 -->
+
+	<!-- PhoneCall IOS 설정 -->
+    <key>LSApplicationQueriesSchemes</key>
 	<array>
 	  <string>tel</string>
 	</array>
+	<!-- PhoneCall IOS 설정 -->
+
+
+    <!-- 이거는 뭔지 모르겠다. 일단 지우지말자... -->
 	<key>UIBackgroundModes</key>
     <array>
         <string>remote-notification</string>
     </array>
+	<!-- 이거는 뭔지 모르겠다. 일단 지우지말자... -->
 </dict>
 </plist>
