--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,7 +88,7 @@ dependencies:
   getwidget: ^3.0.1
 
   # scrollbar
-  adaptive_scrollbar: ^2.1.2
+  # adaptive_scrollbar: ^2.1.2
  
   # flutter spinkit
   flutter_spinkit: ^5.1.0
@@ -128,7 +128,7 @@ dependencies:
   #flutter_app_badger: ^1.5.0
   
   # 앱 뱃지 (지금은 못쓴다.)
-  flutter_app_badger: ^1.5.0
+  #flutter_app_badger: ^1.5.0
 
   # 연결
   connectivity_plus: ^3.0.2
