--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:889387616330:ios:e6cc1c70a9f4c3523a7eb3",
-  "FIREBASE_PROJECT_ID": "help-desk-bc2ac",
-  "GCM_SENDER_ID": "889387616330"
+  "GOOGLE_APP_ID": "1:396702315488:ios:88a6392880673d43583185",
+  "FIREBASE_PROJECT_ID": "niceamc-help",
+  "GCM_SENDER_ID": "396702315488"
 }
